--- a/front_end/src/components/HelloWorld/HelloWorld.css
+++ b/front_end/src/components/HelloWorld/HelloWorld.css
@@ -1,20 +1,93 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 h1{
   font-size: 0.6rem;
   font-weight: bold;
 }
-.header{
+h2{
+  font-size: .45rem;
+}
+li{
+  list-style: none;
+}
+.hello{
+  padding-top: 1.8rem;
+}
+.hello-header{
   width: 100%;
-  height: 1.9rem;
-  background:#d43c33;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
+}
+.header{
+  height: 1.7rem;
+  background:#d43c33;
+
   display: flex;
   box-sizing: border-box;
 }
 .header>h1{
-  line-height:1.9rem ;
+  line-height:1.7rem ;
   color: #fff;
+}
+.u-tab{
+  z-index: 100;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid #eee;
+  background: #fff;
+}
+.tabtitle{
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  width: 33.3%;
+  height: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+.tabtxt{
+  position: relative;
+  display: inline-block;
+  height: 100%;
+  padding: 0 5px;
+  box-sizing: border-box;
+  color: #333;
+  font-size: .4rem;
+  line-height: 1rem;
+}
+.tabtxt span{
+  vertical-align: middle;
+}
+.u-tab .z-selected .tabtxt{
+  color: #d33a31;
+}
+.u-tab .z-selected .tabtxt:after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  z-index: 3;
+  width: 100%;
+  height: 4px;
+  -webkit-transform: scaleY(.5);
+  transform: scaleY(.5);
+  background: #d33a31;
+}
+.tabConListTitle{
+  text-align: left;
+  border-left:.05rem solid red ;
+  padding-left: .2rem;
 }
 
