--- a/front_end/src/components/HelloWorld/HelloWorld.css
+++ b/front_end/src/components/HelloWorld/HelloWorld.css
@@ -24,7 +24,7 @@ a:hover{
   text-decoration: none;
 }
 .hello{
-  padding-top: 1.8rem;
+  padding-top: 1.1rem;
 }
 .hello-header{
   width: 100%;
@@ -96,11 +96,15 @@ a:hover{
   transform: scaleY(.5);
   background: #d33a31;
 }
+.tabCon{
+
+}
 .tabConListTitle{
   text-align: left;
   border-left:.05rem solid red ;
   padding-left: .2rem;
   margin-bottom: .5rem;
+  margin-top: .5rem;
 }
 .tabConListMain{
   position: relative;
@@ -184,4 +188,76 @@ a:hover{
   width: 1rem;
   height: 1rem;
   background-position: -.6rem .1rem;
+}
+.tabHot{
+  position: relative;
+  padding-top: 38.9%;
+  background: url("../../../static/img/hot_music_bg_2x.jpg") no-repeat;
+  background-size: contain;
+  overflow: hidden;
+}
+.tabHotTitleCon{
+
+  z-index: 2;
+
+
+}
+.tabHotTitle{
+  width: 5rem;
+  height: 2.5rem;
+  background-position: -24px -30px;
+  position: absolute;
+  left: .4rem;
+  top: .4rem;
+  right: 0;
+  bottom: 0;
+}
+.rankingList{
+  padding-left: .2rem;
+}
+.rankingListSong{
+  border-bottom: 0.5px solid rgba(0,0,0,.1);
+  padding: 10px 0 5px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.rankingListNum{
+  color: #df3436;
+  align-items: center;
+  width: 28px;
+  font-size: 17px;
+  -webkit-box-align: center;
+  display: flex;
+}
+.rankingListCon{
+  -webkit-box-flex: 1;
+  flex: 1 1 auto;
+  display: flex;
+  position: relative;
+}
+.rankingListName{
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  flex: 1 1 auto;
+  text-align: left;
+}
+.rankingListName p:first-child{
+  font-size: .48rem;
+  color: #333;
+  line-height: 1.5;
+}
+.rankingListName p:last-child{
+  font-size: .2rem;
+  color: #888;
+  line-height: 1.5;
+}
+.rankingListStar{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 0 10px;
 }
